@@ -421,6 +421,12 @@ to print the corresponding values, or T for all of them.")
         (when (array-has-fill-pointer-p obj)
           (format stream (TEXT " and current length (fill-pointer) ~S")
                   (fill-pointer obj))))
+      (when (stringp obj)
+        (multiple-value-bind (bits ro-p realloc) (sys::string-info obj)
+          (write-string (TEXT " (a ") stream)
+          (when ro-p (write-string (TEXT "immutable ") stream))
+          (when realloc (write-string (TEXT "reallocated ") stream))
+          (format stream (TEXT "~S-bit string)") bits)))
       (format stream (TEXT "."))))
   (:method ((obj function) (stream stream))
     (ecase (type-of obj)
